[package]
name = "red4ext-rs-bindings"
version = "0.2.3"
edition = "2021"

[dependencies]
mint = { version = "0.5", optional = true }
red4ext-rs = { git = "https://github.com/jac3km4/red4ext-rs", rev = "v0.7.2" }

[package.metadata.release]
pre-release-commit-message = "chore: bump version"
publish = false

[features]
default = []
mint = ["dep:mint"]
